# heparchy

./: .gitignore  .readthedocs.yaml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg
.github/workflows/: publish-to-pypi.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
examples/: Tutorial.ipynb  conversion.ipynb  events.hdf5  reference_data.txt  write.ipynb  write_read.ipynb
heparchy/: __init__.py  _pdg.csv  _version.py  annotate.py  data.py  hepmc.py  pdg.py  read.py  utils.py  write.py
heparchy/data/: event.py
heparchy/read/: __init__.py  _base.py  _interface.py  base.py  hdf.py  hepmc.py
heparchy/write/: __init__.py  _base.py  _interface.py  base.py  hdf.py
src/heparchy/: read.py
