[metadata]
name = heparchy
author = Jacan Chaplais
author_email = jacanchaplais@gmail.com
description = Hierarchical particle physics data I/O.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jacanchaplais/heparchy
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
[options]
packages = heparchy
install_requires =
    attrs
    numpy
    vector
    networkx
    pyhepmc_ng
    h5py
    pandas
    typicle
